fixing the credentials component

--- a/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.html
+++ b/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.html
@@ -28,7 +28,9 @@
 			<span class="close-btn" (click)="closeWindow()">{{'Cancel' | translate }}</span>
 		</div>
 		<div class="guid">
+			<span (click)="credentialsService.openPermissionSite()">
 			{{'permissions request guid' | translate}}
+			</span>
 			<span (click)="credentialsService.downloadGuide()">
 		<i class="icon-download-guid"></i>
 		</span>
