--- a/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.html
+++ b/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.html
@@ -29,7 +29,7 @@
 		</div>
 		<div class="guid">
 			<span (click)="credentialsService.openPermissionSite()">
-				{{'permissions request guid' | translate}}
+				{{'permissions request guide' | translate}}
 			</span>
 			<span (click)="credentialsService.downloadGuide()">
 		<i class="icon-download-guid"></i>
