add disabled tooltip and config to disable best resolution context menu

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -154,6 +154,7 @@
 		"mainText": "To get overlays anywhere in the world, just right click on the wanted area and click the central button"
   	},
     "overlayCoverage": 0.1,
+    "disableBestResolutionContextMenu": false,
     "displayDebounceTime": 400,
     "sensorTypeShortcuts": {
       "Panchromatic": "P",
