--- a/src/app/@ansyn/ansyn/assets/styles/tooltip.css
+++ b/src/app/@ansyn/ansyn/assets/styles/tooltip.css
@@ -5,6 +5,9 @@
 	for dynamic tooltips use [attr.tooltip-value]
 	<button [attr.tooltip-value]="myString" tooltip-class="right">Hello</button>
 */
+
+@import "./disabled-tooltip.css";
+
 [tooltip-value]:not(.active):not(:disabled):after {
 	content: attr(tooltip-value);
 }
