Fixing the annotation drag button and adding translation to go-to invalid message

--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/go-to/projections/utm/utm.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/go-to/projections/utm/utm.component.html
@@ -44,5 +44,5 @@
 	</ng-template>
 </div>
 <div>
-	<p *ngIf="validationErr" class="error-message">Invalid. try again</p>
+	<p *ngIf="validationErr" class="error-message">{{'Invalid. try again' | translate}}</p>
 </div>
