--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/go-to/projections/geo/geo.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/go-to/projections/geo/geo.component.html
@@ -30,5 +30,5 @@
 	</ng-template>
 </div>
 <div>
-	<p *ngIf="validationErr" class="error-message">Invalid. try again</p>
+	<p *ngIf="validationErr" class="error-message">{{'Invalid. try again' | translate}}</p>
 </div>
