--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-label/annotation-label.component.less
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-label/annotation-label.component.less
@@ -5,7 +5,7 @@
 		button.drag-annotation {
 			position: absolute;
 			top: 35px;
-			right: 0;
+			right: 33px;
 			background-color: transparent;
 			z-index: 2;
 			color: white;
