--- a/src/app/@ansyn/ansyn/modules/status-bar/components/case-panel/case-panel.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/case-panel/case-panel.component.less
@@ -19,7 +19,7 @@
 	.bottom {
 		display: flex;
 		flex: 0 0 100%;
-		justify-content: space-around;
+		justify-content: space-between;
 
 		div {
 			display: flex;
@@ -28,6 +28,7 @@
 
 		.share {
 			cursor: pointer;
+			margin: 0 10px;
 		}
 	}
 }
