--- a/src/app/@ansyn/ansyn/modules/core/forms/combo-box-option/combo-box-option.component.less
+++ b/src/app/@ansyn/ansyn/modules/core/forms/combo-box-option/combo-box-option.component.less
@@ -34,13 +34,13 @@
 		padding: 5px 12px;
 		color: white;
 		cursor: pointer;
+		justify-content: center;
 		box-sizing: border-box;
 		width: 100%;
 		white-space: nowrap;
 		overflow: hidden;
 		text-overflow: ellipsis;
 		border: none;
-		text-align: left;
 		align-items: center;
 
 		i {
