--- a/src/app/@ansyn/ansyn/modules/status-bar/components/case-panel/case-panel.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/case-panel/case-panel.component.less
@@ -13,6 +13,7 @@
 		display: flex;
 		flex: 0 0 100%;
 		padding: 3px 5px;
+		box-sizing: border-box;
 		border-bottom: 1px solid @status-bar-delimiter;
 	}
 
