--- a/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.html
@@ -1,6 +1,6 @@
 <div class="search-panel" [ngClass]="'rtl' === ('direction' | translate) ? 'rtl' : ''">
 
-	<div class="search-title">Search:</div>
+	<div class="search-title">{{'Search' | translate}}:</div>
 	<!-- Time -->
 	<div class="box">
 		<button ansynComboBoxTrigger
@@ -35,6 +35,7 @@
 			name="GeoFilter"
 			[comboBoxToolTipDescription]="statusBarConfig?.toolTips?.geoFilter | translate"
 			[withArrow]="false"
+			[alwaysChange]="true"
 			icon="icon icon-status-bar-geo"
 			[ngModel]="geoFilterTitle"
 			(ngModelChange)="geoFilterChanged($event)">
