--- a/src/app/@ansyn/ansyn/modules/status-bar/components/display-panel/display-panel.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/display-panel/display-panel.component.html
@@ -7,9 +7,8 @@
 			direction="top"
 			name="layout"
 			[withArrow]="false"
-			[comboBoxToolTipDescription]="toolTips.screenNumber | translate"
+			[comboBoxToolTipDescription]="statusBarConfig?.toolTips?.screenNumber | translate"
 			[ngModel]="layout"
-			toolTipField="mapsCount"
 			(ngModelChange)="layoutSelectChange($event)">
 
 			<ansyn-combo-box-option *ngFor="let layout of layouts; index as index" [value]="layout">
@@ -30,7 +29,7 @@
 			name="orientation"
 			[withArrow]="false"
 			[ngModel]="orientation"
-			[comboBoxToolTipDescription]="toolTips?.orientation | translate"
+			[comboBoxToolTipDescription]="statusBarConfig?.toolTips?.orientation | translate"
 			(ngModelChange)="comboBoxesChange({ orientation: $event })">
 
 			<ansyn-combo-box-option *ngFor="let orientation of orientations" [value]="orientation">
