Revert "delete unnececerry code"
This reverts commit dcd6941cab317af8c5189d9f7863c21c8d999657.

--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/tools/tools.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/tools/tools.component.html
@@ -51,6 +51,12 @@
 				[class.active]="displayModeOn && !isGeoOptionsDisabled">
 			<i class="icon-frame-mode"></i>
 		</button>
+
+		<!--<ansyn-overlays-display-mode-->
+			<!--[disabled]="isGeoOptionsDisabled"-->
+			<!--[expand]="isExpand(subMenuEnum.overlays) && !isGeoOptionsDisabled"-->
+			<!--[(modeOn)]="displayModeOn">-->
+		<!--</ansyn-overlays-display-mode>-->
 	</div>
 
 	<div class="user-annotations" [class.active]="isExpand(subMenuEnum.annotations)">
