Adding an area measurement icon

--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-context-menu-buttons/annotations-context-menu-buttons.component.html
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-context-menu-buttons/annotations-context-menu-buttons.component.html
@@ -90,7 +90,7 @@
 			 				  getFeatureProps()?.mode === 'Arrow'">
 		<i [attr.tooltip-value]="'Area' | translate" tooltip-class="bottom">
 			<svg fill="#fff">
-				<path [attr.d]="SVGICON.measureSvg"></path>
+				<path *ngFor="let area of SVGICON.areaSvg" [attr.d]="area"></path>
 			</svg>
 		</i>
 	</button>
