--- a/src/app/@ansyn/ansyn/assets/styles/icons.css
+++ b/src/app/@ansyn/ansyn/assets/styles/icons.css
@@ -17,8 +17,8 @@
 .icon-layer-export:before { content: '\e80f'; } /* '' */
 .icon-favorite-full:before { content: '\e810'; } /* '' */
 .icon-favorite-empty:before { content: '\e811'; } /* '' */
-.icon-frame-mode:before { content: '\e812'; } /* '' */
-.icon-layer-import:before { content: '\e813'; } /* '' */
+.icon-area:before { content: '\e812'; } /* '' */
+.icon-frame-mode:before { content: '\e813'; } /* '' */
 .icon-input-filter:before { content: '\e814'; } /* '' */
 .icon-layers-hide:before { content: '\e815'; } /* '' */
 .icon-layers-show:before { content: '\e816'; } /* '' */
@@ -31,14 +31,15 @@
 .icon-main-tools:before { content: '\e81d'; } /* '' */
 .icon-quick-loop-add:before { content: '\e81e'; } /* '' */
 .icon-main-uploads:before { content: '\e81f'; } /* '' */
+.icon-download:before { content: '\e820'; } /* '' */
 .icon-quick-loop:before { content: '\e821'; } /* '' */
 .icon-remove-overlay:before { content: '\e822'; } /* '' */
 .icon-main-algorithms:before { content: '\e823'; } /* '' */
 .icon-copy:before { content: '\e824'; } /* '' */
 .icon-label:before { content: '\e825'; } /* '' */
 .icon-drag-annotations:before { content: '\e826'; } /* '' */
-.icon-angle-next:before { content: '\e827'; } /* '' */
-.icon-angle-prev:before { content: '\e828'; } /* '' */
+.icon-layer-import:before { content: '\e827'; } /* '' */
+.icon-angle-next:before { content: '\e828'; } /* '' */
 .icon-shadow-mouse:before { content: '\e829'; } /* '' */
 .icon-share:before { content: '\e82a'; } /* '' */
 .icon-status-bar-case:before { content: '\e82b'; } /* '' */
@@ -52,13 +53,14 @@
 .icon-tools-go-to:before { content: '\e833'; } /* '' */
 .icon-tools-image-processing:before { content: '\e834'; } /* '' */
 .icon-tools-ruler:before { content: '\e835'; } /* '' */
+.icon-down-circled2:before { content: '\e836'; } /* '' */
 .icon-upload:before { content: '\e837'; } /* '' */
 .icon-restore-overlay:before { content: '\e838'; } /* '' */
 .icon-export-maps:before { content: '\e839'; } /* '' */
 .icon-pin-point:before { content: '\e83a'; } /* '' */
 .icon-context-menu-first:before { content: '\e83b'; } /* '' */
-.icon-context-menu-angle:before { content: '\e83c'; } /* '' */
-.icon-context-menu-prev:before { content: '\e83d'; } /* '' */
+.icon-angle-prev:before { content: '\e83c'; } /* '' */
+.icon-context-menu-angle:before { content: '\e83d'; } /* '' */
 .icon-context-menu-best:before { content: '\e83e'; } /* '' */
 .icon-context-menu-next:before { content: '\e83f'; } /* '' */
 .icon-context-menu-last:before { content: '\e840'; } /* '' */
@@ -74,4 +76,5 @@
 .icon-unpin:before { content: '\e84a'; } /* '' */
 .icon-pin:before { content: '\e84b'; } /* '' */
 .icon-credentials:before { content: '\e84c'; } /* '' */
+.icon-context-menu-prev:before { content: '\e84d'; } /* '' */
 .icon-status-bar-orientation:before { content: '\e90d'; } /* '' */
