add navigation bar

--- a/src/app/@ansyn/ansyn/modules/status-bar/components/navigation-bar/navigation-bar.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/navigation-bar/navigation-bar.component.less
@@ -1,10 +1,12 @@
 @import "ansyn/less/z-index-globals";
 @import 'ansyn/less/colors';
+@import "ansyn/less/common";
 
 :host {
-	display: block;
-	position: relative;
-	height: 100%;
+	display: flex;
+	position: absolute;
+	align-self: center;
+	top: @status-bar-height;
 }
 
 .navigation {
@@ -30,20 +32,16 @@
 		padding: 0;
 		margin: 2px;
 		border-radius: 5px;
-		background: @background-color-11;
+		background: #494949;
 
 		&.transparent {
 			background: transparent;
 		}
 
-		&.active {
+		&.active, &:active {
 			box-shadow: 0 0 2px 2px #666;
 		}
-	}
-}
 
-@media screen and (max-width: 959px) {
-	div.navigation {
-		display: none;
+
 	}
 }
