--- a/src/app/@ansyn/ansyn/modules/overlays/components/timeline/timeline.component.less
+++ b/src/app/@ansyn/ansyn/modules/overlays/components/timeline/timeline.component.less
@@ -1,5 +1,20 @@
 @import "ansyn/less/colors";
 
+.tick {
+	text {
+		fill: #b0b0b0;
+	}
+}
+
+.bound {
+	text {
+		fill: #cbcbcb;
+	}
+}
+
+line {
+	stroke: #9b9b9b !important;
+}
 circle.active {
 	fill: @application-secondary-color;
 	stroke: white;
