Updating new search bar

--- a/src/app/@ansyn/map-facade/components/map-search-box/map-search-box.component.html
+++ b/src/app/@ansyn/map-facade/components/map-search-box/map-search-box.component.html
@@ -1,5 +1,5 @@
 <form (reset)="control.setValue('')" (submit)="onSubmit()">
-	<input type="text" [placeholder]="'Search' | translate"
+	<input type="text" [placeholder]="'Search locations or enter coordinates' | translate"
 		   [formControl]="control"
 		   [matAutocomplete]="auto">
 	<mat-autocomplete #auto="matAutocomplete" [panelWidth]="autoCompleteWidth + 'px'">
