--- a/src/app/@ansyn/map-facade/components/map-search-box/map-search-box.component.less
+++ b/src/app/@ansyn/map-facade/components/map-search-box/map-search-box.component.less
@@ -9,6 +9,8 @@
 	z-index: @z-index-map-search-box;
 	font-size: 12px;
 	background-color: rgba(0, 0, 0, 0.3);
+	border-width: 1px;
+	//border: 1px rgba(255, 255, 255, 0.8);
 	color: white;
 	padding: 10px;
 
@@ -17,7 +19,7 @@
 		flex-wrap: nowrap;
 
 		input {
-			width: @map-search-box-width;
+			width: 230px;
 			padding: 0;
 			margin: 0;
 			border: none;
