Updating border styles

--- a/src/app/@ansyn/map-facade/components/map-search-box/map-search-box.component.less
+++ b/src/app/@ansyn/map-facade/components/map-search-box/map-search-box.component.less
@@ -9,14 +9,14 @@
 	z-index: @z-index-map-search-box;
 	font-size: 12px;
 	background-color: rgba(0, 0, 0, 0.3);
-	border-width: 1px;
-	//border: 1px rgba(255, 255, 255, 0.8);
+	border: 1px solid rgba(255, 255, 255, 0.8);
 	color: white;
 	padding: 10px;
 
 	form {
 		display: flex;
 		flex-wrap: nowrap;
+		border: 1px rgba(255, 255, 255, 0.8);
 
 		input {
 			width: 230px;
