--- a/src/app/@ansyn/map-facade/components/map-search-box/map-search-box.component.less
+++ b/src/app/@ansyn/map-facade/components/map-search-box/map-search-box.component.less
@@ -1,6 +1,7 @@
 @import "ansyn/less/common";
 @import "ansyn/less/colors";
 @import "ansyn/less/z-index-globals";
+@import "ansyn/less/globals";
 
 :host {
 	position: absolute;
