--- a/src/app/@ansyn/ansyn/modules/status-bar/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/navigation-bar/navigation-bar.component.html
@@ -4,7 +4,7 @@
 			[attr.tooltip-value]="toolTips.backwards | translate"
 			tooltip-class="top left"
 	>
-		<i class="icon-status-bar-prev"></i>
+		<i class="icon-prev"></i>
 	</button>
 
 	<button (click)="clickGoNextPresetOverlay()"
@@ -20,7 +20,7 @@
 			[attr.tooltip-value]="toolTips.forward | translate"
 			tooltip-class="top left"
 	>
-		<i class="icon-status-bar-next"></i>
+		<i class="icon-next"></i>
 	</button>
 	<!--unUsed stop button - future development -->
 	<button style="display: none" class="transparent"
