--- a/src/app/@ansyn/ansyn/assets/styles/icons.css
+++ b/src/app/@ansyn/ansyn/assets/styles/icons.css
@@ -31,21 +31,20 @@
 .icon-main-tools:before { content: '\e81d'; } /* '' */
 .icon-quick-loop-add:before { content: '\e81e'; } /* '' */
 .icon-main-uploads:before { content: '\e81f'; } /* '' */
+.icon-download-guid:before { content: '\e820'; } /* '' */
 .icon-quick-loop:before { content: '\e821'; } /* '' */
 .icon-remove-overlay:before { content: '\e822'; } /* '' */
 .icon-main-algorithms:before { content: '\e823'; } /* '' */
-.icon-copy:before { content: '\e824'; } /* '' */
+.icon-copy-coords:before { content: '\e824'; } /* '' */
 .icon-label:before { content: '\e825'; } /* '' */
 .icon-drag-annotations:before { content: '\e826'; } /* '' */
-.icon-angle-next:before { content: '\e827'; } /* '' */
-.icon-angle-prev:before { content: '\e828'; } /* '' */
+.icon-next:before { content: '\e827'; } /* '' */
+.icon-prev:before { content: '\e828'; } /* '' */
 .icon-shadow-mouse:before { content: '\e829'; } /* '' */
 .icon-share:before { content: '\e82a'; } /* '' */
 .icon-status-bar-case:before { content: '\e82b'; } /* '' */
 .icon-status-bar-geo:before { content: '\e82c'; } /* '' */
 .icon-status-bar-imagery-count:before { content: '\e82d'; } /* '' */
-.icon-status-bar-next:before { content: '\e82e'; } /* '' */
-.icon-status-bar-prev:before { content: '\e82f'; } /* '' */
 .icon-status-bar-time:before { content: '\e830'; } /* '' */
 .icon-temporary-link:before { content: '\e831'; } /* '' */
 .icon-tools-heatmap:before { content: '\e832'; } /* '' */
@@ -70,8 +69,8 @@
 .icon-screen-1:before { content: '\e846'; } /* '' */
 .icon-drag-maps:before { content: '\e847'; } /* '' */
 .icon-main-settings:before { content: '\e848'; } /* '' */
-.icon-credentials-request:before { content: '\e849'; } /* '' */
 .icon-unpin:before { content: '\e84a'; } /* '' */
 .icon-pin:before { content: '\e84b'; } /* '' */
 .icon-credentials:before { content: '\e84c'; } /* '' */
+.icon-credentials-request:before { content: '\e84f'; } /* '' */
 .icon-status-bar-orientation:before { content: '\e90d'; } /* '' */
