--- a/src/app/@ansyn/ansyn/components/ansyn-footer/ansyn-footer.component.html
+++ b/src/app/@ansyn/ansyn/components/ansyn-footer/ansyn-footer.component.html
@@ -9,10 +9,7 @@
 	</button>
 
 	<div class="status">
-		<ansyn-status-bar
-			[selectedCaseName]="selectedCaseName"
-			[activeMap]="activeMap">
-		</ansyn-status-bar>
+		<ansyn-status-bar></ansyn-status-bar>
 	</div>
 
 	<div class="app-timeline-container">
