--- a/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.html
@@ -2,8 +2,7 @@
 
 	<ansyn-search-panel></ansyn-search-panel>
 	<ansyn-display-panel></ansyn-display-panel>
-	<ansyn-case-panel
-	[caseName]="selectedCaseName"></ansyn-case-panel>
+	<ansyn-case-panel></ansyn-case-panel>
 
 </div>
 <ansyn-navigation-bar></ansyn-navigation-bar>
