--- a/src/app/@ansyn/map-facade/components/map-search-box/map-search-box.component.less
+++ b/src/app/@ansyn/map-facade/components/map-search-box/map-search-box.component.less
@@ -1,6 +1,7 @@
 @import "ansyn/less/common";
 @import "ansyn/less/colors";
 @import "ansyn/less/z-index-globals";
+@import "ansyn/less/globals";
 
 :host {
 	position: absolute;
@@ -9,15 +10,17 @@
 	z-index: @z-index-map-search-box;
 	font-size: 12px;
 	background-color: rgba(0, 0, 0, 0.3);
+	border: 1px solid rgba(255, 255, 255, 0.8);
 	color: white;
 	padding: 10px;
 
 	form {
 		display: flex;
 		flex-wrap: nowrap;
+		border: 1px rgba(255, 255, 255, 0.8);
 
 		input {
-			width: @map-search-box-width;
+			width: 230px;
 			padding: 0;
 			margin: 0;
 			border: none;
