--- a/src/app/@ansyn/map-facade/components/map-search-box/map-search-box.component.html
+++ b/src/app/@ansyn/map-facade/components/map-search-box/map-search-box.component.html
@@ -1,7 +1,11 @@
 <form (reset)="control.setValue('')" (submit)="onSubmit()">
-	<input type="text" [placeholder]="'Search' | translate"
-		   [formControl]="control"
-		   [matAutocomplete]="auto">
+	<input *ngIf="geocoderService.onlyCoordinates; else fullSearch"
+		type="text" [placeholder]="geocoderService.placeholder | translate"
+		   [formControl]="control">
+	<ng-template #fullSearch>
+		<input type="text" [placeholder]="geocoderService.placeholder | translate"
+			   [formControl]="control"
+			   [matAutocomplete]="auto">
 	<mat-autocomplete #auto="matAutocomplete" [panelWidth]="autoCompleteWidth + 'px'">
 		<mat-option *ngIf="loading; else loaded;" disabled>
 			{{'loading results' | translate}}
@@ -21,7 +25,7 @@
 			</ng-template>
 		</ng-template>
 	</mat-autocomplete>
-
+</ng-template>
 	<button type="submit"><i class="fa fa-search"></i></button>
 	<button type="reset" [hidden]="!control.value"><i class="fa fa-times"></i></button>
 </form>
