[WIP] New status bar style (#2953)
* status bar new style

* status bar style level 2

* autosubsribstions search-panel

* better binding

* tal review

* tal review

* rtl style

* unrelated style

* redunt

* status bar redunt

* more map size

* size in var

* margin the imagery status button if needed

* upper map search

* cleanup

* add navigation bar

* lint

* timeline style

* starting testing

* testing

* public status bar

* :green-heart: fix build-libs

* lint

--- a/src/app/@ansyn/ansyn/modules/core/forms/combo-box/combo-box.component.html
+++ b/src/app/@ansyn/ansyn/modules/core/forms/combo-box/combo-box.component.html
@@ -1,9 +1,11 @@
 <div class="combo-container" [ngClass]="[direction, color]">
 	<button ansynComboBoxTrigger
+			[ngClass]="buttonClass"
 			type="button"
 			[disabled]="disabled"
 			[isActive]="optionsVisible"
 			[attr.tooltip-value]="comboBoxToolTipDescription || null"
+			[withArrow]="withArrow"
 			tooltip-class="top"
 			[icon]="icon"
 			(click)="toggleShow()">
@@ -12,7 +14,6 @@
 	</button>
 
 	<div class="options-container scrolled"
-		 *ngIf="!disabled"
          #optionsContainer [style.visibility]="optionsVisible ? 'visible' : 'hidden'"
 		 tabindex="0" (blur)="onBlurOptionsContainer($event)">
 		<ng-content></ng-content>
