--- a/src/app/@ansyn/map-facade/components/map-search-box/map-search-box.component.less
+++ b/src/app/@ansyn/map-facade/components/map-search-box/map-search-box.component.less
@@ -5,7 +5,7 @@
 
 :host {
 	position: absolute;
-	top: @status-bar-height + 25;
+	top: @imagery-status-height + 5;
 	left: 10px;
 	z-index: @z-index-map-search-box;
 	font-size: 12px;
