--- a/src/app/@ansyn/ansyn/modules/core/forms/combo-box-option/combo-box-option.component.less
+++ b/src/app/@ansyn/ansyn/modules/core/forms/combo-box-option/combo-box-option.component.less
@@ -34,21 +34,24 @@
 		padding: 5px 12px;
 		color: white;
 		cursor: pointer;
+		justify-content: center;
 		box-sizing: border-box;
 		width: 100%;
 		white-space: nowrap;
-		text-overflow-ellipsis: active;
 		overflow: hidden;
 		text-overflow: ellipsis;
 		border: none;
-		text-align: left;
-		display: block;
 		align-items: center;
 
 		i {
 			align-text: center;
 			opacity: .8;
 			font-size: 16px;
+		}
+
+		/deep/ span.for-title-only {
+			visibility: hidden;
+			width: 0;
 		}
 	}
 }
