--- a/src/app/@ansyn/ansyn/modules/status-bar/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/navigation-bar/navigation-bar.component.html
@@ -1,7 +1,8 @@
 <div class="navigation">
 	<button (click)="clickGoAdjacent(false)"
 			[class.active]="goPrevActive"
-			[attr.tooltip-value]="toolTips.backwards | translate"
+			[disabled]="!hasOverlayDisplay"
+			[attr.tooltip-value]="statusBarConfig?.toolTips?.backwards | translate"
 			tooltip-class="top left"
 	>
 		<i class="icon-prev"></i>
@@ -9,7 +10,8 @@
 
 	<button (click)="clickGoNextPresetOverlay()"
 			[class.active]="goNextQuickLoop"
-			[attr.tooltip-value]="toolTips.quickloop | translate"
+			[disabled]="!hasPresetOverlays"
+			[attr.tooltip-value]="statusBarConfig?.toolTips?.quickloop | translate"
 			tooltip-class="top left"
 	>
 		<i class="icon-quick-loop"></i>
@@ -17,7 +19,8 @@
 
 	<button (click)="clickGoAdjacent(true)"
 			[class.active]="goNextActive"
-			[attr.tooltip-value]="toolTips.forward | translate"
+			[disabled]="!hasOverlayDisplay"
+			[attr.tooltip-value]="statusBarConfig?.toolTips?.forward | translate"
 			tooltip-class="top left"
 	>
 		<i class="icon-next"></i>
@@ -25,7 +28,7 @@
 	<!--unUsed stop button - future development -->
 	<button style="display: none" class="transparent"
 			(click)="clickTime()"
-			[attr.tooltip-value]="toolTips.reset | translate"
+			[attr.tooltip-value]="statusBarConfig?.toolTips?.reset | translate"
 			tooltip-class="top left"
 	>
 		<i class="icon-annotation-square"></i>
@@ -33,7 +36,7 @@
 	<!--unUsed expand button - future development -->
 	<button style="display: none" class="transparent"
 			(click)="clickExpand()"
-			[attr.tooltip-value]="toolTips.enlarge | translate"
+			[attr.tooltip-value]="statusBarConfig?.toolTips?.enlarge | translate"
 			tooltip-class="top left"
 	>
 		<i class="icon-status-bar-expand"></i>
