--- a/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
+++ b/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
@@ -3,11 +3,15 @@
 @import "ansyn/less/z-index-globals";
 @import "map-facade/less/map-facade";
 
-@height-minus-status: calc(~"100% - @{status-bar-height}");
+@attribute-default: 5px;
+@attribute-minimize: @attribute-default + 10;
+@attribute-on-hide-button: 22px;
+@attribute-on-hide-button-minimize: @attribute-on-hide-button + 10;
+
 
 :host {
 	position: absolute;
-	height: 100%;
+	height: calc(100% + 10px);
 	width: 100%;
 
 	div.collapsable {
@@ -15,7 +19,7 @@
 			div.map-container-wrapper {
 				&:first-child {
 					/deep/ .ol-attribution {
-						bottom: 60px;
+						bottom: @attribute-on-hide-button;
 					}
 				}
 			}
@@ -25,7 +29,7 @@
 			div.map-container-wrapper {
 				&:first-child {
 					/deep/ .ol-attribution {
-						bottom: 60px;
+						bottom:  @attribute-on-hide-button;
 					}
 				}
 			}
@@ -35,7 +39,7 @@
 			div.map-container-wrapper {
 				&:nth-child(2) {
 					/deep/ .ol-attribution {
-						bottom: 60px;
+						bottom:  @attribute-on-hide-button;
 					}
 				}
 			}
@@ -45,13 +49,29 @@
 			div.map-container-wrapper {
 				&:nth-child(3) {
 					/deep/ .ol-attribution {
-						bottom: 60px;
+						bottom:  @attribute-on-hide-button;
 					}
 				}
 			}
 		}
 	}
 
+	div.imageries-container:not(.footer-collapsed) {
+		&.layout3, &.layout5 {
+			:nth-child(2) {
+				/deep/ ansyn-imagery-status > div.buttons {
+					margin-left: 15px;
+				}
+			}
+		}
+		&.layout6 {
+			:nth-child(3) {
+				/deep/ ansyn-imagery-status > div.buttons {
+					margin-left: 15px;
+				}
+			}
+		}
+	}
 	div.imageries-container {
 		position: relative;
 		display: flex;
@@ -63,6 +83,10 @@
 		div.map-container-wrapper {
 			position: absolute;
 			overflow: hidden;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
 		}
 
 		div.active-border {
@@ -78,13 +102,14 @@
 			pointer-events: none;
 
 			&.active {
-				border: solid 3px @background-color-3;
+				border: solid 4px @background-color-3;
 			}
 		}
 
 		/deep/ .ol-scale-line {
 			bottom: 5px;
 			height: @scale-line-height;
+			min-width: 200px;
 		}
 
 		/deep/ .ol-scale-line-inner {
@@ -92,35 +117,11 @@
 		}
 
 		/deep/ .ol-attribution {
-			bottom: 40px;
-		}
-
-		/deep/ .ol-scale-line {
-			min-width: 200px;
-		}
-
-		&.layout1 {
-			/deep/ .ol-scale-line {
-				bottom: @status-bar-height;
-			}
-
-
-			div.map-container-wrapper {
-				top: 0;
-				left: 0;
-				width: 100%;
-				height: 100%;
-
-				div.active-border {
-					display: none;
-				}
-			}
+			bottom: @attribute-default;
 		}
 
 		&.layout2 {
-			/deep/ .ol-scale-line {
-				bottom: @status-bar-height;
-			}
+
 
 			div.map-container-wrapper {
 				width: 50%;
@@ -134,10 +135,6 @@
 				&:nth-child(2) {
 					top: 0;
 					left: 50%;
-				}
-
-				div.active-border {
-					height: @height-minus-status;
 				}
 			}
 
@@ -153,29 +150,11 @@
 				&:nth-child(1) {
 					top: 0;
 					left: 0;
-
-					/deep/ .ol-attribution {
-						bottom: 5px;
-					}
 				}
 
 				&:nth-child(2) {
 					top: 50%;
 					left: 0;
-
-					/deep/ .ol-attribution {
-						bottom: 40px;
-					}
-				}
-
-				&:last-child {
-					div.active-border {
-						height: @height-minus-status;
-					}
-
-					/deep/ .ol-scale-line {
-						bottom: @status-bar-height;
-					}
 				}
 			}
 		}
@@ -190,16 +169,6 @@
 					height: 100%;
 				}
 
-				&:first-child, &:last-child {
-					div.active-border {
-						height: @height-minus-status;
-					}
-
-					/deep/ .ol-scale-line {
-						bottom: @status-bar-height;
-					}
-				}
-
 				&:nth-child(1) {
 					top: 0;
 					left: 0;
@@ -208,10 +177,6 @@
 				&:nth-child(2) {
 					top: 0;
 					left: 50%;
-
-					/deep/ .ol-attribution {
-						bottom: 5px;
-					}
 				}
 
 				&:nth-child(3) {
@@ -228,28 +193,11 @@
 				width: 50%;
 				height: 50%;
 
-				&:first-child {
-					width: 100%;
-					height: 50%;
-				}
-
-				&:not(:first-child) {
-					div.active-border {
-						height: @height-minus-status;
-					}
-
-					/deep/ .ol-scale-line {
-						bottom: @status-bar-height;
-					}
-				}
-
 				&:nth-child(1) {
 					top: 0;
 					left: 0;
-
-					/deep/ .ol-attribution {
-						bottom: 5px;
-					}
+					width: 100%;
+					height: 50%;
 				}
 
 				&:nth-child(2) {
@@ -268,22 +216,6 @@
 			div.map-container-wrapper {
 				width: 50%;
 				height: 50%;
-
-				&:nth-child(1), &:nth-child(2) {
-					/deep/ .ol-attribution {
-						bottom: 5px;
-					}
-				}
-
-				&:nth-child(3), &:nth-child(4) {
-					div.active-border {
-						height: @height-minus-status;
-					}
-
-					/deep/ .ol-scale-line {
-						bottom: @status-bar-height;
-					}
-				}
 
 				&:nth-child(1) {
 					top: 0;
@@ -309,21 +241,11 @@
 	}
 
 	div.footer-collapsed {
-		/deep/ .ol-scale-line {
-			bottom: 5px !important;
-		}
-
-		&.layout1 {
-			/deep/ .ol-attribution {
-				bottom: 5px;
-			}
+		/deep/ .ol-attribution {
+			bottom: @attribute-minimize;
 		}
 
 		&.layout2 {
-			/deep/ .ol-attribution {
-				bottom: 5px;
-			}
-
 			div.map-container-wrapper {
 				width: 50%;
 				height: 100%;
@@ -333,7 +255,7 @@
 					left: 0;
 
 					/deep/ .ol-attribution {
-						bottom: 5px;
+						bottom:  @attribute-on-hide-button-minimize;
 					}
 				}
 
@@ -341,12 +263,7 @@
 					top: 0;
 					left: 50%;
 				}
-
-				div.active-border {
-					height: 100%;
-				}
 			}
-
 		}
 
 		&.layout3 {
@@ -356,29 +273,17 @@
 				width: 100%;
 				height: 50%;
 
-				/deep/ .ol-attribution {
-					bottom: 5px;
-				}
-
 				&:nth-child(1) {
 					top: 0;
 					left: 0;
+					/deep/ .ol-attribution {
+						bottom: @attribute-default;
+					}
 				}
 
 				&:nth-child(2) {
 					top: 50%;
 					left: 0;
-				}
-
-				&:last-child {
-
-					div.active-border {
-						height: 100%;
-					}
-
-					/deep/ .ol-attribution {
-						bottom: 5px;
-					}
 				}
 			}
 		}
@@ -388,33 +293,23 @@
 				width: 50%;
 				height: 50%;
 
-				&:first-child {
+				&:nth-child(1) {
 					width: 50%;
 					height: 100%;
-				}
-
-				&:first-child, &:last-child {
-					div.active-border {
-						height: 100%;
-					}
-
-					/deep/ .ol-attribution {
-						bottom: 5px;
-					}
-				}
-
-				&:nth-child(1) {
 					top: 0;
 					left: 0;
 
 					/deep/ .ol-attribution {
-						bottom: 5px;
+						bottom: @attribute-on-hide-button-minimize;
 					}
 				}
 
 				&:nth-child(2) {
 					top: 0;
 					left: 50%;
+					/deep/ .ol-attribution {
+						bottom: @attribute-default;
+					}
 				}
 
 				&:nth-child(3) {
@@ -422,8 +317,6 @@
 					left: 50%;
 				}
 			}
-
-			flex-direction: column;
 		}
 
 		&.layout5 {
@@ -431,24 +324,14 @@
 				width: 50%;
 				height: 50%;
 
-				&:first-child {
+				&:nth-child(1) {
 					width: 100%;
 					height: 50%;
-				}
-
-				&:not(:first-child) {
-					div.active-border {
-						height: 100%;
-					}
-
-					/deep/ .ol-attribution {
-						bottom: 5px;
-					}
-				}
-
-				&:nth-child(1) {
 					top: 0;
 					left: 0;
+					/deep/ .ol-attribution {
+						bottom: @attribute-default;
+					}
 				}
 
 				&:nth-child(2) {
@@ -456,7 +339,7 @@
 					left: 0;
 
 					/deep/ .ol-attribution {
-						bottom: 5px;
+						bottom: @attribute-on-hide-button-minimize;
 					}
 				}
 
@@ -472,17 +355,6 @@
 				width: 50%;
 				height: 50%;
 
-
-				/deep/ .ol-attribution {
-					bottom: 5px;
-				}
-
-				&:nth-child(3), &:nth-child(4) {
-					div.active-border {
-						height: 100%;
-					}
-				}
-
 				&:nth-child(1) {
 					top: 0;
 					left: 0;
@@ -493,12 +365,18 @@
 					left: 50%;
 				}
 
+				&:nth-child(1), &:nth-child(2) {
+					/deep/ .ol-attribution {
+						bottom: @attribute-default;
+					}
+				}
+
 				&:nth-child(3) {
 					top: 50%;
 					left: 0;
 
 					/deep/ .ol-attribution {
-						bottom: 5px;
+						bottom: @attribute-on-hide-button-minimize;
 					}
 				}
 
